Fix spacing for homepage pending review

--- a/frontend/src/components/CSS/App.css
+++ b/frontend/src/components/CSS/App.css
@@ -87,7 +87,12 @@ h3 {
 
 .app-container {
   background-color: var(--back_ground);
-  flex-grow: 1;
+  position: relative;
+  min-height: 100vh;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow: auto;
 }
 
 .footer {
@@ -96,6 +101,7 @@ h3 {
   padding: 1rem;
   width: 100%;
   position: absolute;
+  bottom: 0;  
 }
 
 @keyframes App-logo-spin {
