--- a/frontend/src/components/CSS/Homepage.css
+++ b/frontend/src/components/CSS/Homepage.css
@@ -23,6 +23,7 @@
   margin-right: auto;
   margin-left: auto;
   height: 83vh;
+  overflow: auto;
 }
 
 .card-container {
